Day 3: Implement LeNet-5 architecture with Tanh and AvgPool

--- a/lenet5_impl.ipynb
+++ b/lenet5_impl.ipynb
@@ -93,6 +93,84 @@
     "        ax.set_title(f\"Label: {labels[i].item()}\")\n",
     "    pyplot.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "be1ef8b4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Model Architecture Created:\n",
+      "LeNet5(\n",
+      "  (c1): Conv2d(1, 6, kernel_size=(5, 5), stride=(1, 1))\n",
+      "  (s2): AvgPool2d(kernel_size=2, stride=2, padding=0)\n",
+      "  (c3): Conv2d(6, 16, kernel_size=(5, 5), stride=(1, 1))\n",
+      "  (s4): AvgPool2d(kernel_size=2, stride=2, padding=0)\n",
+      "  (c5): Linear(in_features=400, out_features=120, bias=True)\n",
+      "  (f6): Linear(in_features=120, out_features=84, bias=True)\n",
+      "  (output): Linear(in_features=84, out_features=10, bias=True)\n",
+      "  (act): Tanh()\n",
+      ")\n",
+      "\n",
+      "✅ Output Shape: torch.Size([1, 10])\n",
+      "🎉 Success! Dimensions are correct. Ready for training.\n"
+     ]
+    }
+   ],
+   "source": [
+    "class LeNet5(nn.Module):\n",
+    "    def __init__(self):\n",
+    "        super(LeNet5, self).__init__()\n",
+    "\n",
+    "        self.c1 = nn.Conv2d(in_channels=1, out_channels=6, kernel_size=5)\n",
+    "        self.s2 = nn.AvgPool2d(kernel_size=2, stride=2)\n",
+    "        self.c3 = nn.Conv2d(in_channels=6, out_channels=16, kernel_size=5)\n",
+    "        self.s4 = nn.AvgPool2d(kernel_size=2, stride=2)\n",
+    "        self.c5 = nn.Linear(16 * 5 * 5, 120)\n",
+    "        self.f6 = nn.Linear(120, 84)\n",
+    "        self.output = nn.Linear(84, 10)\n",
+    "        self.act = nn.Tanh()\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        x = self.act(self.c1(x))\n",
+    "        x = self.s2(x)\n",
+    "        x = self.act(self.c3(x))\n",
+    "        x = self.s4(x)\n",
+    "        x = x.view(x.size(0), -1)\n",
+    "        x = self.act(self.c5(x))\n",
+    "        x = self.act(self.f6(x))\n",
+    "        x = self.output(x)\n",
+    "\n",
+    "        return x\n",
+    "\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    if torch.backends.mps.is_available():\n",
+    "        device = torch.device(\"mps\")\n",
+    "    elif torch.cuda.is_available():\n",
+    "        device = torch.device(\"cuda\")\n",
+    "    else:\n",
+    "        device = torch.device(\"cpu\")\n",
+    "\n",
+    "    model = LeNet5().to(device)\n",
+    "    print(\"✅ Model Architecture Created:\")\n",
+    "    print(model)\n",
+    "\n",
+    "    dummy_input = torch.randn(1, 1, 32, 32).to(device)\n",
+    "\n",
+    "    output = model(dummy_input)\n",
+    "\n",
+    "    print(f\"\\n✅ Output Shape: {output.shape}\")\n",
+    "\n",
+    "    if output.shape == torch.Size([1, 10]):\n",
+    "        print(\"🎉 Success! Dimensions are correct. Ready for training.\")\n",
+    "    else:\n",
+    "        print(\"❌ Error: Dimensions do not match [1, 10]. Check calculations.\")"
+   ]
   }
  ],
  "metadata": {
